--- a/Module 3/EntityFramework/CodeFirstExistingDatabase/CodeFirstExistingDatabase/App.config
+++ b/Module 3/EntityFramework/CodeFirstExistingDatabase/CodeFirstExistingDatabase/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PlutoContext" connectionString="data source=LUCHOS-PC\SQLEXPRESS;initial catalog=PlutoCodeFirst;persist security info=True;user id=georgievlb;password=wtf;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="PlutoContext" connectionString="data source=.\SQLEXPRESS01;initial catalog=PlutoCodeFirst;persist security info=False;user id=georgiev;password=wtf;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
