--- a/Module 3/EntityFramework/CodeFirstDemo/CodeFirstDemo/App.config
+++ b/Module 3/EntityFramework/CodeFirstDemo/CodeFirstDemo/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings> <!--we need a connection string -->
-    <add name="BlogDbContext" connectionString="data source=.\SQLEXPRESS; initial catalog=CodeFirstDemo; integrated security=SSPI" providerName="System.Data.SqlClient"/> <!--same name as db context, integrated security means we are using windows authentication-->
+    <add name="BlogDbContext" connectionString="data source=.\SQLEXPRESS01; initial catalog=CodeFirstDemo; integrated security=SSPI" providerName="System.Data.SqlClient"/> <!--same name as db context, integrated security means we are using windows authentication-->
   </connectionStrings>
 </configuration>
