--- a/Module 3/EntityFramework/CodeFirstExistingDatabase/CodeFirstExistingDatabase/CodeFirstExistingDatabase.csproj
+++ b/Module 3/EntityFramework/CodeFirstExistingDatabase/CodeFirstExistingDatabase/CodeFirstExistingDatabase.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Author.cs" />
     <Compile Include="Category.cs" />
-    <Compile Include="Courses.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="C__MigrationHistory.cs" />
     <Compile Include="Migrations\201710100607292_InitialModel.cs" />
     <Compile Include="Migrations\201710100607292_InitialModel.Designer.cs">
@@ -67,6 +67,14 @@
     <Compile Include="Migrations\201710100636590_AddCategoryColumnToCoursesTable.Designer.cs">
       <DependentUpon>201710100636590_AddCategoryColumnToCoursesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710101219233_CreateGradeColumn.cs" />
+    <Compile Include="Migrations\201710101219233_CreateGradeColumn.Designer.cs">
+      <DependentUpon>201710101219233_CreateGradeColumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710101222427_RemoveCreateGradeColumn.cs" />
+    <Compile Include="Migrations\201710101222427_RemoveCreateGradeColumn.Designer.cs">
+      <DependentUpon>201710101222427_RemoveCreateGradeColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
@@ -74,7 +82,9 @@
     <Compile Include="Tag.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -86,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710100636590_AddCategoryColumnToCoursesTable.resx">
       <DependentUpon>201710100636590_AddCategoryColumnToCoursesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710101219233_CreateGradeColumn.resx">
+      <DependentUpon>201710101219233_CreateGradeColumn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710101222427_RemoveCreateGradeColumn.resx">
+      <DependentUpon>201710101222427_RemoveCreateGradeColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
