--- a/Module 3/EntityFramework/CodeFirstLiveDemo.Data/CodeFirstLiveDemo.Models/CodeFirstLiveDemo.Models.csproj
+++ b/Module 3/EntityFramework/CodeFirstLiveDemo.Data/CodeFirstLiveDemo.Models/CodeFirstLiveDemo.Models.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Course.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Mark.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
