--- a/Module 3/EntityFramework/CodeFirstPlutoGreenField/CodeFirstPlutoGreenField/CodeFirstPlutoGreenField.csproj
+++ b/Module 3/EntityFramework/CodeFirstPlutoGreenField/CodeFirstPlutoGreenField/CodeFirstPlutoGreenField.csproj
@@ -49,21 +49,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201710110633559_InitialModel.cs" />
-    <Compile Include="Migrations\201710110633559_InitialModel.Designer.cs">
-      <DependentUpon>201710110633559_InitialModel.cs</DependentUpon>
+    <Compile Include="Author.cs" />
+    <Compile Include="Course.cs" />
+    <Compile Include="CourseLevel.cs" />
+    <Compile Include="Migrations\201710121933322_Initial migration.cs" />
+    <Compile Include="Migrations\201710121933322_Initial migration.Designer.cs">
+      <DependentUpon>201710121933322_Initial migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201710110633559_InitialModel.resx">
-      <DependentUpon>201710110633559_InitialModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201710121933322_Initial migration.resx">
+      <DependentUpon>201710121933322_Initial migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
