--- a/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
+++ b/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{808D826E-20CF-481D-9E09-747F5079B01A}</ProjectGuid>
+    <ProjectGuid>{C9589629-D5FE-48CD-9803-9F79C6676FF4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HelloWorldUsingDI</RootNamespace>
-    <AssemblyName>HelloWorldUsingDI</AssemblyName>
+    <RootNamespace>HelloWorldUsingIoC</RootNamespace>
+    <AssemblyName>HelloWorldUsingIoC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.3.1.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.1\lib\net45\Ninject.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,18 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleMessageWriter.cs" />
-    <Compile Include="DataBaseWriter.cs" />
-    <Compile Include="FileMessageWriter.cs" />
     <Compile Include="IMessageWriter.cs" />
-    <Compile Include="ISalutation.cs" />
-    <Compile Include="Ninject\HelloWorldModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salutation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
