--- a/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
+++ b/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.3.1.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.1\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,12 +47,15 @@
   <ItemGroup>
     <Compile Include="ConsoleMessageWriter.cs" />
     <Compile Include="IMessageWriter.cs" />
+    <Compile Include="ISalutation.cs" />
+    <Compile Include="Ninject\HelloWorldModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salutation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
