Added named bindings to IMessageWriter

--- a/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
+++ b/Module 2/HQC/HelloWorldUsingIoC/HelloWorldUsingIoC/HelloWorldUsingIoC.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleMessageWriter.cs" />
+    <Compile Include="DataBaseWriter.cs" />
+    <Compile Include="FileMessageWriter.cs" />
     <Compile Include="IMessageWriter.cs" />
     <Compile Include="ISalutation.cs" />
     <Compile Include="Ninject\HelloWorldModule.cs" />
