--- a/Module 4/FirstProject/FirstProject/FirstProject.csproj
+++ b/Module 4/FirstProject/FirstProject/FirstProject.csproj
@@ -216,9 +216,17 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201710251249377_InitialCreate.cs" />
-    <Compile Include="Migrations\201710251249377_InitialCreate.Designer.cs">
-      <DependentUpon>201710251249377_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201710300733394_Initial Migration.cs" />
+    <Compile Include="Migrations\201710300733394_Initial Migration.Designer.cs">
+      <DependentUpon>201710300733394_Initial Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710300806147_Added Customers to DbContext.cs" />
+    <Compile Include="Migrations\201710300806147_Added Customers to DbContext.Designer.cs">
+      <DependentUpon>201710300806147_Added Customers to DbContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710300819251_Added Movies to DbContext.cs" />
+    <Compile Include="Migrations\201710300819251_Added Movies to DbContext.Designer.cs">
+      <DependentUpon>201710300819251_Added Movies to DbContext.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -295,11 +303,6 @@
     <Content Include="Views\Customers\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201710251249377_InitialCreate.resx">
-      <DependentUpon>201710251249377_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
   <ItemGroup>
@@ -311,6 +314,17 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710300733394_Initial Migration.resx">
+      <DependentUpon>201710300733394_Initial Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710300806147_Added Customers to DbContext.resx">
+      <DependentUpon>201710300806147_Added Customers to DbContext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710300819251_Added Movies to DbContext.resx">
+      <DependentUpon>201710300819251_Added Movies to DbContext.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
