--- a/Module 4/FirstProject/FirstProject/Web.config
+++ b/Module 4/FirstProject/FirstProject/Web.config
@@ -7,11 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
+    <!--<add name="DefaultConnection" 
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FirstProject-20171022040642.mdf;Initial Catalog=aspnet-FirstProject-20171022040642;Integrated Security=True" 
-         providerName="System.Data.SqlClient" />
+         providerName="System.Data.SqlClient" />-->
+      <add name="FirstProject" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog = FirstProjectDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -36,8 +37,8 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
-    <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    
+  <validation validateIntegratedModeConfiguration="false" /><handlers>
             <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
         </handlers></system.webServer>
   <runtime>
