--- a/Module 4/FirstProject/FirstProject/Web.config
+++ b/Module 4/FirstProject/FirstProject/Web.config
@@ -12,7 +12,9 @@
     <!--<add name="DefaultConnection" 
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FirstProject-20171022040642.mdf;Initial Catalog=aspnet-FirstProject-20171022040642;Integrated Security=True" 
          providerName="System.Data.SqlClient" />-->
-      <add name="FirstProject" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog = FirstProjectDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
+      <add name="FirstProject" 
+           connectionString="Data Source=.\SQLEXPRESS; Initial Catalog = FirstProjectDB; Integrated Security=True;" 
+           providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
